<?xml version="1.0"?>
<package>
  <name>onrobot_hex_ft_sensor</name>
  <version>1.0.0</version>
  <description>The onrobot_hex_ft_sensor package</description>

  <maintainer email="ros@optoforce.com">OptoForce</maintainer>

  <license>BSD</license>

  <author email="ros@optoforce.com">OptoForce</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tinyxml</build_depend>

  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>diagnostic_updater</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tinyxml</run_depend>

</package>
